Commit at good save point with basic functionality.

--- a/output/index.html
+++ b/output/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,17 +13,15 @@
 
 <body>
     <h1>Avatar Generator</h1>
-    <h2>DK</h2>
+    <h2>D</h2>
     <img src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairShortFlat&accessoriesType=Prescription02&hairColor=Black&facialHairType=BeardLight&facialHairColor=Black&clotheType=ShirtCrewNeck&clotheColor=PastelRed&eyeType=Default&eyebrowType=DefaultNatural&mouthType=Default&skinColor=Light'
         alt="avatar" />
-    <h3>Charlotte, NC</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolores eum odit magnam voluptatum! Eos, itaque
-        veritatis illo inventore maxime ratione aperiam facere, rerum debitis voluptatibus in cupiditate, exercitationem
-        maiores!</p>
-    <a href="#linkedin">Linkedin</a>
-    <a href="#github">Github</a>
+    <h3>D</h3>
+    <p>D</p>
+    <a href="#undefined">Linkedin</a>
+    <a href="#undefined">Github</a>
     <h3>License</h3>
-    <img src="https://img.shields.io/badge/license-Apache-red" alt="badge-apache" />
+    <img src="https://img.shields.io/badge/license-GPL-red" alt="badge-GPL" />
 </body>
 
 </html>
