Now inserts license badges.

--- a/output/index.html
+++ b/output/index.html
@@ -20,8 +20,9 @@
     <p>D</p>
     <a href="#undefined">Linkedin</a>
     <a href="#undefined">Github</a>
-    <h3>License</h3>
-    <img src="https://img.shields.io/badge/license-GPL-red" alt="badge-GPL" />
+    
+        <h3>License</h3>
+        <img src="https://img.shields.io/badge/license-BSD-goldenrod" alt="badge-BSD" />
+        
 </body>
-
 </html>
