--- a/output/index.html
+++ b/output/index.html
@@ -22,7 +22,7 @@
     <a href="#undefined">Github</a>
     
         <h3>License</h3>
-        <img src="https://img.shields.io/badge/license-BSD-goldenrod" alt="badge-BSD" />
+        <img src="https://img.shields.io/badge/license-GPL-grey" alt="badge-GPL" height="44" />
         
 </body>
 </html>
