Adding templates for tests and classes.

--- a/output/index.html
+++ b/output/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <h1>Avatar Generator</h1>
-    <h2>Jimmy</h2>
+    <h2>Scarapo</h2>
     <img src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairShortFlat&accessoriesType=Prescription02&hairColor=Black&facialHairType=BeardLight&facialHairColor=Black&clotheType=ShirtCrewNeck&clotheColor=PastelRed&eyeType=Default&eyebrowType=DefaultNatural&mouthType=Default&skinColor=Light'
         alt="avatar" />
-    <h3>J</h3>
-    <p>j</p>
+    <h3>k</h3>
+    <p>k</p>
     <a href="#undefined">Linkedin</a>
     <a href="#undefined">Github</a>
     
