Got manager questions up and displaying.

--- a/template.html
+++ b/template.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title</title>
+    <title>Team Profile Generator</title>
     <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 
+<header> Team Profile Generator</header>
+
 <body>
-    <h1>Avatar Generator</h1>
-    <h2>DK</h2>
-    <img src='https://avataaars.io/?avatarStyle=Transparent&topType=ShortHairShortFlat&accessoriesType=Prescription02&hairColor=Black&facialHairType=BeardLight&facialHairColor=Black&clotheType=ShirtCrewNeck&clotheColor=PastelRed&eyeType=Default&eyebrowType=DefaultNatural&mouthType=Default&skinColor=Light'
-        alt="avatar" />
-    <h3>Charlotte, NC</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolores eum odit magnam voluptatum! Eos, itaque
-        veritatis illo inventore maxime ratione aperiam facere, rerum debitis voluptatibus in cupiditate, exercitationem
-        maiores!</p>
-    <a href="#linkedin">Linkedin</a>
-    <a href="#github">Github</a>
-    <h3>License</h3>
-    <img src="https://img.shields.io/badge/license-Apache-red" alt="badge-apache" />
+    <section>
+        <h4>Manager</h2>
+        <p>Name: ${managerName}</p>
+        <p>Employee ID: ${managerID}</p>
+        <p>Email Address:
+            <a href="mailto:${managerEmail}">${managerEmail}</a>
+        </p>
+        <p>Office Number: ${managerOfficeNumber}<p>
+    </section>
+
 </body>
 
 </html>
