--- a/template.html
+++ b/template.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Profile Generator</title>
-    <!-- Minified version -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 
@@ -15,14 +14,33 @@
 <body>
     <section>
         <h4>Manager</h2>
-        <p>Name: ${managerName}</p>
-        <p>Employee ID: ${managerID}</p>
-        <p>Email Address:
-            <a href="mailto:${managerEmail}">${managerEmail}</a>
-        </p>
-        <p>Office Number: ${managerOfficeNumber}<p>
+            <p>Name: ${managerName}</p>
+            <p>Employee ID: ${managerID}</p>
+            <p>Email Address:
+                <a href="mailto:${managerEmail}">${managerEmail}</a>
+            </p>
+            <p>Office Number: ${managerOfficeNumber}
+            <p>
+    </section>
+
+    <section>
+        ${generateSomeone}
     </section>
 
 </body>
 
 </html>
+
+<!-- Engineer -->
+<section>
+    <h4>Engineer</h2>
+        <p>Name: ${engineerName}</p>
+        <p>Employee ID: ${engineerID}</p>
+        <p>Email Address:
+            <a href="mailto:${engineerEmail}">${engineerEmail}</a>
+        </p>
+        <p>Github: 
+            <a href="https://github.com/${engineerGithub}"></a>
+        </p>
+        <p>
+</section>
