Able to cycle through different answers depending on selection of engineer or intern.

--- a/output/index.html
+++ b/output/index.html
@@ -15,15 +15,37 @@
         <body>
         <section>
             <h4>Manager</h2>
-                <p>Name: G</p>
-                <p>Employee ID: G</p>
+                <p>Name: D</p>
+                <p>Employee ID: D</p>
                 <p>Email Address:
-                    <a href="mailto:G">G</a>
+                    <a href="mailto:D">D</a>
                 </p>
-                <p>Office Number: G
+                <p>Office Number: D
                 <p>
         </section>
+
+
+        <section>
+        <h4>Engineer</h2>
+            <p>Name: undefined</p>
+            <p>Employee ID: undefined</p>
+            <p>Email Address:
+                <a href="mailto:undefined">D</a>
+            </p>
+            <p>Github: 
+            <a href="https://github.com/undefined"></a>
+        </section>
     
+        <section>
+        <h4>Intern</h2>
+            <p>Name: D</p>
+            <p>Employee ID: D</p>
+            <p>Email Address:
+                <a href="mailto:D">D</a>
+            </p>
+            <p>Office Number: D
+            <p>
+        </section>
 
         
     </body>
