Commit After Adding to Readme and making a video of the command line and HTML.

--- a/output/index.html
+++ b/output/index.html
@@ -15,35 +15,35 @@
         <body>
         <section>
             <h4>Manager</h2>
-                <p>Name: D</p>
-                <p>Employee ID: D</p>
+                <p>Name: Dave</p>
+                <p>Employee ID: 3456</p>
                 <p>Email Address:
-                    <a href="mailto:D">D</a>
+                    <a href="mailto:dk@gmail.com">dk@gmail.com</a>
                 </p>
-                <p>Office Number: D
+                <p>Office Number: 9
                 <p>
         </section>
 
 
         <section>
         <h4>Engineer</h2>
-            <p>Name: undefined</p>
-            <p>Employee ID: undefined</p>
+            <p>Name: Jim</p>
+            <p>Employee ID: 2356</p>
             <p>Email Address:
-                <a href="mailto:undefined">D</a>
+                <a href="mailto:jk@gmail.com">jk@gmail.com</a>
             </p>
             <p>Github: 
-            <a href="https://github.com/undefined"></a>
+            <a href="https://github.com/jkjk">jkjk</a>
         </section>
     
         <section>
         <h4>Intern</h2>
-            <p>Name: D</p>
-            <p>Employee ID: D</p>
+            <p>Name: undefined</p>
+            <p>Employee ID: undefined</p>
             <p>Email Address:
-                <a href="mailto:D">D</a>
+                <a href="mailto:undefined">undefined</a>
             </p>
-            <p>Office Number: D
+            <p>Office Number: undefined
             <p>
         </section>
 
