Commit after tutor session, updating Classes, and refactoring questions.

--- a/output/index.html
+++ b/output/index.html
@@ -15,25 +15,25 @@
         <body>
         <section>
             <h4>Manager</h2>
-                <p>Name: Dave</p>
-                <p>Employee ID: 3456</p>
+                <p>Name: undefined</p>
+                <p>Employee ID: undefined</p>
                 <p>Email Address:
-                    <a href="mailto:dk@gmail.com">dk@gmail.com</a>
+                    <a href="mailto:undefined">undefined</a>
                 </p>
-                <p>Office Number: 9
+                <p>Office Number: undefined
                 <p>
         </section>
 
 
         <section>
         <h4>Engineer</h2>
-            <p>Name: Jim</p>
-            <p>Employee ID: 2356</p>
+            <p>Name: undefined</p>
+            <p>Employee ID: undefined</p>
             <p>Email Address:
-                <a href="mailto:jk@gmail.com">jk@gmail.com</a>
+                <a href="mailto:undefined">undefined</a>
             </p>
             <p>Github: 
-            <a href="https://github.com/jkjk">jkjk</a>
+            <a href="https://github.com/undefined">undefined</a>
         </section>
     
         <section>
